[package]
name = "minecraft_map_tool"
authors = ["Ossi Saukko <osaukko@gmail.com>"]
description = "Utility for handling Minecraft map files"
version = "0.2.0"
edition = "2021"

[dependencies]
comfy-table = "6"
crossterm = "0"
fastnbt = "2"
flate2 = "1"
image = "0"
natord = "1"
serde_json = "1"
viuer = "0"

[dependencies.clap]
features = ["derive"]
version = "4"

[dependencies.phf]
features = ["macros"]
version = "0"

[dependencies.quick-xml]
version = "0"
optional = true

[dependencies.reqwest]
version = "0"
features = ["blocking"]
optional = true

[dependencies.serde]
features = ["derive"]
version = "1"

[dev-dependencies]
hex = "0"

[features]
# This will add subcommands for the development.
dev_tools = ["quick-xml", "reqwest"]
# This will add support for sixel protocol to display maps to the terminal.
sixel = ["viuer/sixel"]
