[package]
authors = ["Ossi Saukko <osaukko@gmail.com>"]
description = "Utility for handling Minecraft map files"
edition = "2021"
license-file = "LICENSE"
name = "minecraft_map_tool"
publish = false
version = "0.2.0"

[dependencies]
anyhow = "1.0.75"
comfy-table = "7.1"
crossterm = "0.27"
fastnbt = "2.4"
flate2 = "1.0"
heck = "0.4"
image = "0.24"
indicatif = "0.17.7"
natord = "1.0"
serde_json = "1.0"
viuer = "0.7"

[dependencies.clap]
features = ["derive"]
version = "4.4"

[dependencies.phf]
features = ["macros"]
version = "0.11"

[dependencies.quick-xml]
version = "0.31"
optional = true

[dependencies.reqwest]
version = "0.11"
features = ["blocking"]
optional = true

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dev-dependencies]
hex = "0.4"

[features]
# This will add subcommands for the development.
dev_tools = ["quick-xml", "reqwest"]
# This will add support for sixel protocol to display maps to the terminal.
sixel = ["viuer/sixel"]
